pingpong/manifests/deployment-serverless.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: pingpong-dep-serverless
  namespace: exercises
spec:
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: jacker92/pingpong:latest
          env:
          - name: POSTGRES_PASSWORD
            valueFrom:
              secretKeyRef:
                name: postgres
                key: password
