pingpong/manifests/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 3002
      protocol: TCP
      targetPort: 5432
